fix navbar responsivnes on safari

--- a/app/uslugi/page.module.css
+++ b/app/uslugi/page.module.css
@@ -56,6 +56,8 @@
 }
 .description{
   white-space: pre-wrap;
+  text-align: justify;
+  text-justify: inter-word;
 
 }
 .imageTitle {
